project_2/project_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/uart_module.build.log
14:25:03 **** Auto Build of configuration Debug for project uart_module ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../uart_module_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:69:26: error: unknown type name 'u16'
 int IicPsSelfTestExample(u16 DeviceId);
                          ^
../src/helloworld.c:73:1: error: unknown type name 'XIicPs'
 XIicPs Iic;   /* Instance of the IIC Device */
 ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:96:2: warning: implicit declaration of function 'IicPsSelfTestExample' [-Wimplicit-function-declaration]
  Status = IicPsSelfTestExample(IIC_DEVICE_ID);
  ^
../src/helloworld.c:62:24: error: 'XPAR_XIICPS_0_DEVICE_ID' undeclared (first use in this function)
 #define IIC_DEVICE_ID  XPAR_XIICPS_0_DEVICE_ID
                        ^
../src/helloworld.c:96:32: note: in expansion of macro 'IIC_DEVICE_ID'
  Status = IicPsSelfTestExample(IIC_DEVICE_ID);
                                ^
../src/helloworld.c:62:24: note: each undeclared identifier is reported only once for each function it appears in
 #define IIC_DEVICE_ID  XPAR_XIICPS_0_DEVICE_ID
                        ^
../src/helloworld.c:96:32: note: in expansion of macro 'IIC_DEVICE_ID'
  Status = IicPsSelfTestExample(IIC_DEVICE_ID);
                                ^
../src/helloworld.c:97:16: error: 'XST_SUCCESS' undeclared (first use in this function)
  if (Status != XST_SUCCESS) {
                ^
../src/helloworld.c:98:3: warning: implicit declaration of function 'xil_printf' [-Wimplicit-function-declaration]
   xil_printf("IIC Self Test Failed\r\n");
   ^
../src/helloworld.c:99:10: error: 'XST_FAILURE' undeclared (first use in this function)
   return XST_FAILURE;
          ^
../src/helloworld.c:130:5: warning: implicit declaration of function 'print' [-Wimplicit-function-declaration]
     print("L0\n");
     ^
../src/helloworld.c:198:6: warning: implicit declaration of function 'inbyte' [-Wimplicit-function-declaration]
      echo[rx_index] = inbyte(); // blocking - inbyte is polled
      ^
../src/helloworld.c: At top level:
../src/helloworld.c:308:26: error: unknown type name 'u16'
 int IicPsSelfTestExample(u16 DeviceId)
                          ^
make: *** [src/helloworld.o] Error 1

14:25:04 Build Finished (took 1s.346ms)

